--- a/public/printableResult.html
+++ b/public/printableResult.html
@@ -66,11 +66,12 @@
     </div>
     <div id="psychomotorDiv"></div>
     <div>
-      <!-- <h4>Class Teacher's Comment: ____________________________________________
-         Sign: ___________</h4> -->
-      <!-- <h4>Head Teacher's Comment: 
-        ____________________________________________
-       Sign: ___________</h4> -->
+      <h4>Class Teacher's Comment: 
+        ______________________________________________________________________</h4>
+        <br> <h4>Name:____________________ Sign: _______________</h4><br>
+      <h4>Head Teacher's Comment: 
+        ______________________________________________________________________</h4>
+       <br><h4>Sign: _______________</h4>
     </div>
     <div class="summary" id="summary"></div>
 
