--- a/public/printableResult.html
+++ b/public/printableResult.html
@@ -49,7 +49,8 @@
     </table>
 
     <div class="split" style="display: flex; justify-content: space-between;">
-    <table style="width: 35%;">
+      <div id="resultPosition"></div>
+    <!-- <table style="width: 35%;">
       <tr id="totalScore"
       style="font-size: 12px; font-weight: bolder;"></tr>
 
@@ -57,7 +58,7 @@
       style="font-size: 12px; font-weight: bolder;"></tr>
       <tr id="gradeScore"
       style="font-size: 12px; font-weight: bolder;"></tr>
-    </table>
+    </table> -->
     <div class="in-split">
     <!-- <div id="termTitle"></div> -->
     <p style="font-weight: bold; font-size: 12px; color: green;" id="vacationDateDisplay"></p>
@@ -66,12 +67,14 @@
     </div>
     <div id="psychomotorDiv"></div>
     <div>
-      <h4>Class Teacher's Comment: 
-        ______________________________________________________________________</h4>
-        <br> <h4>Name:____________________ Sign: _______________</h4><br>
-      <h4>Head Teacher's Comment: 
-        ______________________________________________________________________</h4>
-       <br><h4>Sign: _______________</h4>
+      <h5>Form Master's Comment: 
+        _______________________________________________________________________________________________</h5>
+        <!-- <br> <h5>Name:____________________ Sign: _______________</h5><br> -->
+      <h5>Head Teacher's Comment: 
+        _______________________________________________________________________________________________</h5>
+       <br>
+       <h5 style="display: flex; justify-content: space-between;">Form Master's Signature: __________________________  <span style="color: white;"> 
+       </span> Head Teacher's Signature: __________________________</h5>
     </div>
     <div class="summary" id="summary"></div>
 
