--- a/public/TeacherDevice.html
+++ b/public/TeacherDevice.html
@@ -65,6 +65,14 @@
 
      </div>
 
+    <div class="termShareDiv">
+            <!-- psychomotor Buttons -->
+        <button id="exportPsychomotorBtn">Export Psychomotor Data</button>
+        <input type="file" id="importPsychomotorFile" style="display:none" />
+        <button id="importPsychomotorBtn">Import Psychomotor Data</button>
+
+        </div>
+
 <div class="termShareDiv">
     <!-- Teacher: only uses export button -->
     <button id="exportBtn">Export First Term Data</button>
@@ -91,6 +99,7 @@
 </div>
 
   <script type="module" src="attendanceShare.js"></script>
+  <script type="module" src="psychomotorShare.js"></script>
   <script type="module" src="TeacherDevice.js"></script>
   <script type="module" src="TeacherDeviceTerm2.js"></script>
   <script type="module" src="TeacherDeviceTerm3.js"></script>
