--- a/public/firstTerm.html
+++ b/public/firstTerm.html
@@ -103,8 +103,8 @@
                 </div>
                 <div class="psychomotorForm" id="psychomotorForm">
   <h3>Psychomotor Assessment</h3>
-  <!-- <label style="display: hidden;">Student Name:</label> --->
-  <input type="hidden" id="studentIdPsychomotor" readonly>
+  <!-- <label>Student Name:</label> -->
+  <input id="studentIdPsychomotor" readonly>
   <input type="hidden" id="psychomotorSession" readonly>
   <input type="hidden" id="psychomotorTerm" value="1" readonly>
 
