update deep created delete btn for psychomotor store

--- a/public/classStudent.html
+++ b/public/classStudent.html
@@ -56,6 +56,10 @@
             
                 <div class="tableDiv">
                     <div id="amountOfStudent"></div>
+                    <button id="clearPsychomotorBtn" style="background:red;color:white;padding:8px 14px;border:none;border-radius:6px;cursor:pointer;">
+  🗑️ Clear All Psychomotor Data
+</button>
+
                     <table id="student-table">
                         <!-- Promotion Modal -->
                         <div id="promotionModal" class="promotionModal">
@@ -89,6 +93,7 @@
     </div>
     </div>
     <script type="module" src="showgem.js"></script>
+    <script type="module" src="clearPsychomotorData.js"></script>
     <script type="module" src="classStudent.js"></script>
     <script src="nav.js"></script>
     <script type="module" src="app.js"></script>
