new update for teacher remark and someothers

--- a/public/student.html
+++ b/public/student.html
@@ -67,7 +67,7 @@
                         <form id="formInput">
                             <input type="text" id="firstNameInput" placeholder=" FIRST NAME">
                             <input type="text" id="surNameInput" placeholder="SUR NAME">
-                            <input type="text" id="otherNameInput" placeholder="OTHER NAME">
+                            <!-- <input type="text" id="otherNameInput" placeholder="OTHER NAME"> -->
                             <input type="text" id="phoneNumberInput" placeholder="PARENT PHONE No.">
                             <div class="selectDiv">
                                 <legend>GENDER:</legend>
@@ -129,9 +129,9 @@
                             <thead>
                                 <tr>
                                     <th>ID</th>
-                                    <th>FIRST NAME</th>
                                     <th>SUR NAME</th>
-                                    <th>OTHER NAME</th>
+                                    <th>FIRST NAME</th>
+                                    <!-- <th>OTHER NAME</th> -->
                                     <!-- <th>PHONE No.</th> -->
                                     <th>ACTION</th>
                                 </tr>
