update to add teacher remark on result

--- a/public/printableResult.html
+++ b/public/printableResult.html
@@ -67,9 +67,8 @@
     </div>
     <div id="psychomotorDiv"></div>
     <div>
-      <h5>Form Master's Comment: 
-        _______________________________________________________________________________________________</h5>
-        <!-- <br> <h5>Name:____________________ Sign: _______________</h5><br> -->
+      <h5>Form Master's Comment: <i id="remarkfromDB"></i>
+        <br>
       <h5>Head Teacher's Comment: 
         _______________________________________________________________________________________________</h5>
        <br>
