--- a/public/teacherRemark.html
+++ b/public/teacherRemark.html
@@ -77,10 +77,19 @@
       <option value="">-- Choose Class --</option>
     </select>
 
+    <label for="studentSelect">Select Term:</label>
+    <select id="termSelect">
+      <option value="">-- Choose Term --</option>
+      <option value="1">1st Term</option>
+      <option value="2">2nd Term</option>
+      <option value="3">3rd Term</option>
+    </select>
+
     <label for="studentSelect">Select Student:</label>
     <select id="studentSelect">
       <option value="">-- Choose Student --</option>
     </select>
+    
 
     <label for="teacherRemark">Enter Remark:</label>
     <textarea id="teacherRemark" placeholder="Write your remark here..."></textarea>
