updated register subject BTN

--- a/public/firstTerm.html
+++ b/public/firstTerm.html
@@ -61,7 +61,7 @@
                     <div class="register-div">
                         <div class="split-info">
                             <div class="register-subject">
-                                <button class="animated-btn" id="regSubject">Register Subject</button>
+                                <button class="animated-btn" id="regSubject">Don't click</button>
                             </div>
                             
                         </div>
