--- a/public/secondTerm.html
+++ b/public/secondTerm.html
@@ -62,7 +62,7 @@
                         <p>Register subject</p>
                          <div class="split-info">
                             <div class="register-subject">
-                                <button class="animated-btn" id="regSubject">Register Subject</button>
+                                <button class="animated-btn" id="regSubject">Don't click</button>
                             </div>
                         </div>
                         <div id="registerFormDiv" class="registerFormDiv">
