update on attendance and student-subjects go back btn

--- a/public/attendance.html
+++ b/public/attendance.html
@@ -74,8 +74,8 @@
   <div class="list-section">
     <h2>Mark Attendance</h2>
     <form id="attendanceForm">
-      <ul id="studentList"></ul>
-      <button type="submit" class="btn">Save Attendance</button>
+      <!-- <ul id="studentList"></ul>
+      <button type="submit" class="btn">Save Attendance</button> -->
     </form>
   </div>
   <table id="attendanceTable">
