--- a/public/student-subjects.html
+++ b/public/student-subjects.html
@@ -45,6 +45,10 @@
   </style>
 </head>
 <body>
+  <button id="back-btn" style="width: 100%; padding:10px;
+  color: white; background: rgba(104, 104, 211, 0.849);" >
+            ⬅ Go Back
+            </button>
   <h2>Student Scores by Class, Subject & Session</h2>
 
   <div class="filters">
@@ -69,7 +73,7 @@
         <th>Student Name</th>
         <th>CA1</th>
         <th>CA2</th>
-        <th>CA3</th>
+        <!-- <th>CA3</th> -->
         <th>Exam</th>
         <th>Total</th>
       </tr>
