please work student-subjects.html

--- a/public/student-subjects.html
+++ b/public/student-subjects.html
@@ -75,7 +75,7 @@
         <th>CA2</th>
         <th>CA3</th>
         <th>Exam</th>
-        <th>Total</th>
+        <th>Total.</th>
       </tr>
     </thead>
     <tbody>
