--- a/public/classResult.html
+++ b/public/classResult.html
@@ -61,7 +61,7 @@
                                 <th>ID</th>
                                 <th>Sur Name</th>
                                 <th>First Name</th>
-                                <th>Other Name</th>
+                                <!-- <th>Other Name</th> -->
                                 <th>Action</th>
 
                             </tr>
