updated font size remark

--- a/public/printableResult.html
+++ b/public/printableResult.html
@@ -71,7 +71,7 @@
     </div>
     <div id="psychomotorDiv"></div>
     <div>
-      <h5>Form Master's Comment: <i id="remarkfromDB"></i>
+      <h6>Form Master's Comment: <i id="remarkfromDB"></i></h6>
         <br>
       <h5>Head Teacher's Comment: 
         _______________________________________________________________________________________________</h5>
