new font size update

--- a/public/printableResult.html
+++ b/public/printableResult.html
@@ -72,10 +72,10 @@
     <div id="psychomotorDiv"></div>
     <div>
       <h6>Form Master's Comment: <i id="remarkfromDB"></i></h6>
-        <br>
+        <div>
       <h5>Head Teacher's Comment: 
         _______________________________________________________________________________________________</h5>
-       <br>
+       </div>
        <h5 style="display: flex; justify-content: space-between;">Form Master's Signature: __________________________  <span style="color: white;"> 
        </span> Head Teacher's Signature: __________________________</h5>
     </div>
