--- a/public/printableResult.html
+++ b/public/printableResult.html
@@ -72,7 +72,7 @@
     <div id="psychomotorDiv"></div>
     <div>
       <h6>Form Master's Comment: <i id="remarkfromDB"></i></h6>
-        <div>
+        <div style="margin-bottom: 2px; margin-top: 2px;">
       <h5>Head Teacher's Comment: 
         _______________________________________________________________________________________________</h5>
        </div>
