--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -3,122 +3,109 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SchoolBase Privacy Policy</title>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5284ZQD5X0"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-5284ZQD5X0');
-</script>
-  <meta name='admaven-placement' content=Bqja7pjg5>
-  <style>
-    body {
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      line-height: 1.7;
-      margin: 0;
-      padding: 20px;
-      background: #f9fafc;
-      color: #333;
-    }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      background: #fff;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.08);
-    }
-    h1 {
-      color: #2a4d8f;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    h2 {
-      margin-top: 30px;
-      color: #1d3668;
-    }
-    a {
-      color: #2a4d8f;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <title>Privacy Policy</title>
 </head>
 <body>
- <div class="container">
-  <h1>Privacy Policy</h1>
-  <p>Effective Date: <strong>September 2025</strong></p>
+  <div class="successContent">
+     <div class="container">
+        <!-- dashbord page top bar-->
+        <div class="schoolbase" id="schoolbase">
+            <h3 id="schoolName">School Base</h3>
+            <h1>FREE RESULT MANAGEMENT SYSTEM</h1>
+        </div>
+        
 
-  <p>
-    SchoolBase (“we,” “our,” or “us”) respects your privacy. 
-    This Privacy Policy explains how information is collected, used, and shared 
-    when you use our website or app in compliance with 
-    <a href="https://policies.google.com/technologies/ads" target="_blank">Google AdSense Program Policies</a>.
-  </p>
+        <div class="contentBody">
+            <!---- Nav bar --------->
+            <nav class="navSide">
+                <ul id="navUl">
+                    <!---- from nav.js-->
+                </ul>
+            </nav>
+            <div id="offline-banner" style="
+            display: none;
+            background: #ff4d4d;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 1000;
+            font-size: 10px;
+            ">
+            🔌 You are on offline mode. Some features may be unavailable.
+            </div>
 
-  <h2>1. Advertising</h2>
-  <p>
-    Our app and website use <strong>Google AdSense</strong> <!--- and <strong>Google AdMob</strong> -->
-    to display advertisements. These services help keep SchoolBase free for schools, teachers, and students.  
-    Ads may be personalized (based on your interests) or non-personalized.
-  </p>
+            <!----- Dash BOARD BODY ------>
+            <div class="dashOptions">
+                <div class="title">
+                    <h2>MANAGMENT...</h2>
+                    <button id="install-btn" style="display:none; padding: 9px; background: green;
+                    color: white;">Install App</button>
+                    <button id="update-btn" style="display:none; padding: 9px; background: green;
+                    color: white;">Update App</button>
 
-  <h2>2. Data Collection by Google</h2>
-  <p>
-    Google, as a third-party vendor, uses cookies and similar technologies to serve ads.  
-    Google may collect information such as device identifiers, IP addresses, and usage data.  
-    This information is managed by Google in accordance with their 
-    <a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a>.
-  </p>
-  <p>
-    You can learn more about how Google uses your information here:  
-    <a href="https://policies.google.com/technologies/partner-sites" target="_blank">
-      How Google uses information from sites or apps that use our services
-    </a>.
-  </p>
+                </div>
+                <div class="infoCards">
+                    <div class="infoCard" id="studentsAmount">Students <br> 
+                        <span id="totalCount"></span>
+                    </div>
+                    <!-- <div class="infoCard" id="teachersAmount">Teachers <br>
+                    <span></span>
+                </div> -->
+                    <div class="infoCard" id="boysAmount">Boys <br>
+                    <span id="boyCount"></span>
+                </div>
+                    <div class="infoCard" id="girlsAmount">Girls <br>
+                    <span id="girlCount"></span>
+                </div>
+                </div>
+                <div class="moreInfo" id="moreInfo">
+                    <div class="sessionShow" id="sessionShow">..
+                        <!------Show active session ----->
+                    </div>
+                    <!---- more info on the school ------>
+                </div>
 
-  <h2>3. Cookies and Tracking</h2>
-  <p>
-    - Google and its partners use cookies to serve ads based on your prior visits to this site or other websites.  
-    - Users may opt out of personalized advertising by visiting  
-      <a href="https://www.google.com/settings/ads" target="_blank">Google Ads Settings</a>.  
-    - Alternatively, you can opt out of some third-party vendors’ use of cookies by visiting  
-      <a href="https://www.aboutads.info/choices" target="_blank">www.aboutads.info/choices</a>.
-  </p>
+                <div class="dashboard-container">
 
-  <h2>4. No Sharing of Student Records</h2>
-  <p>
-    SchoolBase does not share, sell, or transmit student or school records 
-    with advertisers, Google, or any third parties.  
-    Ads only use general device/usage data, never sensitive student information.
-  </p>
+  <div class="space-between">
+    <a href="schoolLogo.html"><button class="shiny-btn">School Info</button></a><br><br>
+    <a href="session.html"><button class="shiny-btn">Academic Sessions</button></a><br><br>
+    <a href="student-subjects.html"><button class="shiny-btn">Student Subjects</button></a>
+  </div>
 
-  <h2>5. Your Privacy Choices</h2>
-  <ul>
-    <li>You can manage ad personalization in your Google Account.</li>
-    <li>You can disable cookies in your browser or device settings.</li>
-    <li>Residents of the EU (GDPR) and California (CCPA) may have additional rights to control their data.</li>
-  </ul>
+  <div class="connectDevices">
+    <a href="admin.html"><button class="shareAdminDataBtn red">Send Data to Teacher(s)</button></a>
+    <a href="TeacherDevice.html"><button class="getDataBtn blue">Share Data</button></a>
+    <br>
+    <a href="aboutus.html"><button class="getDataBtn blue">About Us</button></a>
+  </div>
 
-  <h2>6. Changes to this Policy</h2>
-  <p>
-    We may update this Privacy Policy from time to time.  
-    Updates will be posted on this page with a revised effective date.
-  </p>
+  <a href="https://wa.me/2349151003654" target="_blank" class="whatsapp-link">
+    <img src="icons/whatsAppPng.png" alt="WhatsApp Us">
+  </a>
 
-  <h2>7. Contact Us</h2>
-  <p>
-    If you have any questions about this Privacy Policy or our practices, please contact us at:<br>
-    📧 <strong>kendrickmarahaja@gmail.com</strong><br>
-    📧 <strong>vjcode091@gmail.com</strong>
-  </p>
 </div>
 
+            </div>
+        </div>
+    </div>
+    
+    <script type="module" src="install.js"></script>
+    <script type="module" src="showgem.js"></script>
+    <script type="module" src="index.js"></script>
+    <script src="nav.js"></script>
+    <script type="module" src="app.js"></script>
+  </div>
+
+  <!-----=== for 404 error messages ===-->
+  <div class="errContent">
+    <div class="font" style="text-align: center;">
+      <h1 style="font-size: 200px;">404</h1>
+      <p>This page could not be found contact the developer.</p>
+    </div>
+  </div>
 </body>
 </html>
