just updated youTube videos

--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -35,7 +35,6 @@
            onchange="document.getElementById('click-sound').volume = this.value">
   </div>
   <div class="privacyPolicy">
-    <a href="privacy-policy.html">Privacy Policy</a>
 </div>
 
 </div>
@@ -46,8 +45,8 @@
 
         <div class="youTubeIframeDiv">
         <!-- YouTube Embed -->
-        <iframe 
-            src="https://www.youtube.com/embed/yloy1Okfe9U" 
+        <iframe
+            src="https://www.youtube.com/embed/p6tn1QTA5IE" 
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -56,8 +55,8 @@
         </div>
         <div class="youTubeIframeDiv">
             <!-- YouTube Embed -->
-        <iframe 
-            src="https://www.youtube.com/embed/3KdGhMuetqc" 
+        <iframe
+            src="https://www.youtube.com/embed/bNUNHp1m3GQ" 
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
